@@ -33,7 +33,8 @@ Features
 Changes on purpose:
 ===================
 
- * 
+ * Users are allowed to add themself in their home project, even when they got removed.
+   Admins should use the user state and set them to "locked" when they do want to block them.
 
 Incompatible changes:
 =====================
